attempt to fix elasticsearch race condition failing builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,4 @@ before_install:
   - "curl -O https://download.elasticsearch.org/elasticsearch/release/org/elasticsearch/distribution/deb/elasticsearch/2.1.1/elasticsearch-2.1.1.deb && sudo dpkg -i --force-confnew elasticsearch-2.1.1.deb"
   - "echo 'script.inline: on' | sudo tee -a /etc/elasticsearch/elasticsearch.yml"
   - "sudo /etc/init.d/elasticsearch start"
+  - "sleep 5"
