--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,22 @@ language: ruby
 
 cache: bundler
 
-rvm:
-  - 2.2.2
+before_script:
+  - bundle exec danger
+
+env:
+  - ELASTICSEARCH=https://download.elastic.co/elasticsearch/release/org/elasticsearch/distribution/deb/elasticsearch/2.4.4/elasticsearch-2.4.4.deb
+  - ELASTICSEARCH=https://download.elasticsearch.org/elasticsearch/release/org/elasticsearch/distribution/deb/elasticsearch/2.1.1/elasticsearch-2.1.1.deb
+  - ELASTICSEARCH=https://download.elastic.co/elasticsearch/elasticsearch/elasticsearch-1.7.6.deb
+  - ELASTICSEARCH=https://download.elastic.co/elasticsearch/elasticsearch/elasticsearch-1.5.2.deb
 
 before_install:
   - gem update bundler
-  - "curl -O https://download.elasticsearch.org/elasticsearch/release/org/elasticsearch/distribution/deb/elasticsearch/2.1.1/elasticsearch-2.1.1.deb && sudo dpkg -i --force-confnew elasticsearch-2.1.1.deb"
+  - curl -O $ELASTICSEARCH && sudo dpkg -i --force-confnew elasticsearch-*.deb
   - "echo 'script.inline: on' | sudo tee -a /etc/elasticsearch/elasticsearch.yml"
-  - "sudo /etc/init.d/elasticsearch start"
-  - "sleep 5"
+  - sudo /etc/init.d/elasticsearch start
+  - sleep 8
+  - curl -XGET http://localhost:9200
 
-before_script:
-  - bundle exec danger
+rvm:
+  - 2.2.2
