--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,4 +35,4 @@ workflows:
       - test:
           matrix:
             parameters:
-              ruby_version: ["2.5", "2.6", "2.7"]
+              ruby_version: ["2.7"]
