--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,9 @@ jobs:
   test:
     docker:
       - image: "cimg/ruby:<< parameters.ruby_version >>"
-      - image: elasticsearch:6.8.23
+      - image: docker.elastic.co/elasticsearch/elasticsearch:7.17.18
+        environment:
+          - discovery.type: single-node
     parameters:
       ruby_version:
         type: string
@@ -29,4 +31,4 @@ workflows:
       - test:
           matrix:
             parameters:
-              ruby_version: ["2.7"]
+              ruby_version: ["3.1"]
